--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- Write your HTML in this file -->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +5,11 @@
   </head>
 
   <body>
-
+    <header>
+      <nav>
+        <ul><li>About</li></ul>
+        
+      </nav>
+    </header>
   </body>
 </html>
