--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <body>
     <header>
       <nav>
-        <ul><li>About</li></ul>
-        
+        <ul>
+          <li>About</li>
+          <li>New Questions</li>  
+        </ul>
       </nav>
+      <h3>Icebreakerz</h3>
     </header>
   </body>
 </html>
